Fix to Helm Charts secrets

--- a/charts/templates/cron/cron.secret.yaml
+++ b/charts/templates/cron/cron.secret.yaml
@@ -1,11 +1,11 @@
-{{ if .Values.web.secret }}
+{{ if .Values.cron.secret }}
 apiVersion: v1
 kind: Secret
 metadata:
   namespace: {{ include "helpers.namespace" . | quote }}
-  name: {{ include "helpers.fullname" . }}-web-secret
+  name: {{ include "helpers.fullname" . }}-cron-secret
 stringData:
-  {{- range $key, $val := .Values.web.secret }}
+  {{- range $key, $val := .Values.cron.secret }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
 {{ end }}
