--- a/charts/templates/rpc-gateway/rpcgw.secret.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.secret.yaml
@@ -6,7 +6,7 @@ kind: Secret
 metadata:
   name: {{ $network }}-{{ include "helpers.fullname" $ }}-rpcgateway-secret
   namespace: {{ include "helpers.namespace" $ | quote }}
-data:
+stringData:
   {{- range $key, $val := $data.secret }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
