--- a/charts/sc.values.yaml
+++ b/charts/sc.values.yaml
@@ -88,7 +88,7 @@ api:
     annotations: {} # Annotations of the API service account
     name: "" # Default name: api-sa
 
-  secret: []  # Secrets to be injected as environment variables
+  secret: []  # Secrets to be injected as environment variables as string (not base64)
     # SECRET_KEY: c2VjcmV0Cg==
 
   additionalSecrets: [] # Additional secrets to mount as environment variables
@@ -160,7 +160,7 @@ web:
       enabled: true
       secretName: web-tls # Name of the secret that contains or will contain the certificate
 
-  secret: []  # Secrets to be injected as environment variables
+  secret: []  # Secrets to be injected as environment variables as string (not base64)
     # SECRET_KEY: c2VjcmV0Cg==
 
   additionalSecrets: [] # Additional secrets to mount as environment variables
@@ -215,7 +215,7 @@ rpcgateway:
       tag: v1.5.0  # Version of the rpc gateway image
       pullPolicy: Always
     
-    secret: []  # Secrets to be injected as environment variables
+    secret: []  # Secrets to be injected as environment variables as string (not base64)
       # SECRET_KEY: c2VjcmV0Cg==
 
     additionalSecrets: [] # Additional secrets to mount as environment variables
@@ -287,7 +287,7 @@ rpcgateway:
       pullPolicy: Always
 
     
-    secret: []  # Secrets to be injected as environment variables
+    secret: []  # Secrets to be injected as environment variables as string (not base64)
       # SECRET_KEY: c2VjcmV0Cg==
 
     additionalSecrets: [] # Additional secrets to mount as environment variables
@@ -362,7 +362,7 @@ cron:
       memory: 128Mi
 
   
-  secret: []  # Secrets to be injected as environment variables
+  secret: []  # Secrets to be injected as environment variables as string (not base64)
     # SECRET_KEY: c2VjcmV0Cg==
 
   additionalSecrets: [] # Additional secrets to mount as environment variables
