--- a/charts/templates/api/api.secret.yaml
+++ b/charts/templates/api/api.secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "helpers.fullname" . }}-api-secret
-data:
+stringData:
   {{- range $key, $val := .Values.api.secret }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
