:recycle: refacto PO feedback

--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "geoip-lite": "^1.4.7",
+    "fast-geoip": "^1.1.88",
     "module-alias": "^2.2.2",
-    "next": "^13.1.5",
     "node-schedule": "^2.1.1",
     "prisma": "^4.9.0",
     "prisma-query": "^2.0.0",
