--- a/charts/templates/rpc-gateway/rpcgw.cm.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.cm.yaml
@@ -11,9 +11,9 @@ data:
   RPC_GATEWAY_LABEL: {{ $.Values.env.TESTNET_RPC_GATEWAY_LABEL }}
   RPC_GATEWAY_PORT: {{ quote $.Values.env.TESTNET_RPC_GATEWAY_PORT }}
   RPC_GATEWAY_ROOT_URL: {{ $.Values.env.TESTNET_RPC_GATEWAY_ROOT_URL }}
-  ARCHIVE_NODES_URL: {{ printf "http://%s" $.Values.env.TESTNET_ARCHIVE_NODES_URL }}
+  ARCHIVE_NODES_URL: {{$.Values.env.TESTNET_ARCHIVE_NODES_URL }}
   ARCHIVE_NODES_PORT: {{ quote $.Values.env.TESTNET_ARCHIVE_NODES_PORT }}
-  ROLLING_NODES_URL: {{ printf "http://%s" $.Values.env.TESTNET_ROLLING_NODES_URL }}
+  ROLLING_NODES_URL: {{ $.Values.env.TESTNET_ROLLING_NODES_URL }}
   ROLLING_NODES_PORT: {{ quote $.Values.env.TESTNET_ROLLING_NODES_PORT}}
   DATABASE_HOSTNAME: {{ $.Values.env.DATABASE_HOSTNAME }}
   DATABASE_PORT: {{ quote $.Values.env.DATABASE_PORT }}
@@ -26,9 +26,9 @@ data:
   RPC_GATEWAY_LABEL: {{ $.Values.env.MAINNET_RPC_GATEWAY_LABEL }}
   RPC_GATEWAY_PORT: {{ quote $.Values.env.MAINNET_RPC_GATEWAY_PORT }}
   RPC_GATEWAY_ROOT_URL: {{ $.Values.env.MAINNET_RPC_GATEWAY_ROOT_URL }}
-  ARCHIVE_NODES_URL: {{ printf "http://%s" $.Values.env.MAINNET_ARCHIVE_NODES_URL }}
+  ARCHIVE_NODES_URL: {{ printf $.Values.env.MAINNET_ARCHIVE_NODES_URL }}
   ARCHIVE_NODES_PORT: {{ quote $.Values.env.MAINNET_ARCHIVE_NODES_PORT }}
-  ROLLING_NODES_URL: {{ printf "http://%s" $.Values.env.MAINNET_ROLLING_NODES_URL }}
+  ROLLING_NODES_URL: {{ $.Values.env.MAINNET_ROLLING_NODES_URL }}
   ROLLING_NODES_PORT: {{ quote $.Values.env.MAINNET_ROLLING_NODES_PORT}}
   DATABASE_HOSTNAME: {{ $.Values.env.DATABASE_HOSTNAME }}
   DATABASE_PORT: {{ quote $.Values.env.DATABASE_PORT }}
